--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.7",
+    "toml": "^3.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.1",
     "vite-plugin-checker": "^0.5.6"
