align docker env var mapping

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3.7'
 services:
   admin:
     image: ghcr.io/unownhash/flygon-admin:main
@@ -6,13 +6,13 @@ services:
     command: './Admin'
     restart: unless-stopped
     environment:
-      GENERAL.USERNAME: admin
-      GENERAL.PASSWORD: password
+      ADMIN_GENERAL_USERNAME: admin
+      ADMIN_GENERAL_PASSWORD: password
 
-      FLYGON.API_ENDPOINT: http://flygon:9002
-      FLYGON.API_SECRET: secret
+      ADMIN_FLYGON_API_ENDPOINT: http://flygon:9002
+      ADMIN_FLYGON_API_SECRET: secret
 
-      GOLBAT.API_ENDPOINT: http://golbat:9001
-      GOLBAT.API_SECRET: secret
+      ADMIN_GOLBAT_API_ENDPOINT: http://golbat:9001
+      ADMIN_GOLBAT_API_SECRET: secret
     ports:
       - '9003:9003'
