--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,8 @@ services:
 
       ADMIN_GOLBAT_API_ENDPOINT: http://golbat:9001
       ADMIN_GOLBAT_API_SECRET: secret
+
+      ADMIN_KOJI_API_ENDPOINT: http://koji:8080
+      ADMIN_KOJI_API_BEARER_TOKEN: secret
     ports:
       - '9003:9003'
