live worker dashboard
- Adds a live dashboard for viewing workers
- Grouped by areas
- Live updates every 3s

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -14,7 +14,9 @@
         "*.js",
         "*.jsx"
       ],
-      "rules": {}
+      "rules": {
+        "@typescript-eslint/ban-types": "off"
+      }
     },
     {
       "files": [
