--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-admin": "^4.8.4",
     "react-dom": "^18.2.0",
     "react-leaflet": "4.2.1",
+    "react-window": "^1.8.9",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
@@ -64,6 +65,7 @@
     "@types/papaparse": "^5.3.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-window": "^1.8.5",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
     "@vitejs/plugin-react": "^3.1.0",
