--- a/package.json
+++ b/package.json
@@ -37,12 +37,11 @@
     "lodash.debounce": "^4.0.8",
     "papaparse": "^5.3.2",
     "pixi.js": "^6.5.8",
-    "ra-core": "^4.9.0",
-    "ra-data-simple-rest": "^4.8.4",
+    "ra-data-simple-rest": "^4.11.2",
     "react": "^18.2.0",
-    "react-admin": "^4.8.4",
+    "react-admin": "^4.11.2",
     "react-dom": "^18.2.0",
-    "react-leaflet": "4.2.1",
+    "react-leaflet": "^4.2.1",
     "react-window": "^1.8.9",
     "zustand": "^4.3.8"
   },
