--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "react-admin": "^4.11.2",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "react-window": "^1.8.9",
+    "react-virtuoso": "^4.3.10",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
@@ -64,7 +64,6 @@
     "@types/papaparse": "^5.3.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@types/react-window": "^1.8.5",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
     "@vitejs/plugin-react": "^4.0.0",
